# WebRTC_Camera

./: .gitmodules  README.md  build_opencv.sh  build_webrtc.sh
WebRTC_Camera_Native/: CMakeLists.txt  main.cpp
WebRTC_Camera_Native/inc/: CapturerFactory.h  FakeCapturer.h  FakeCapturerQueue.h  PeerConnectionManager.h  VcmCapturer.h  VideoScaler.h  VideoScalerSetup.h
WebRTC_Camera_Native/src/: PeerConnectionManager.cpp  VideoScalerSetup.cpp
